syntax = "proto3";

package azdext;

option go_package = "github.com/azure/azure-dev/cli/azd/pkg/azdext;azdext";
option csharp_namespace = "Microsoft.Azd";

import "models.proto";

service WorkflowService {
  // ListResources retrieves all configured composability resources in the current project.
  rpc Run(RunWorkflowRequest) returns (EmptyResponse);
}

// RunWorkflowRequest is a request to run a workflow.
message RunWorkflowRequest {
  Workflow workflow = 1;
}

// Workflow is a collection of steps to be executed in order.
message Workflow {
  string name = 1;
  repeated WorkflowStep steps = 2;
}

// WorkflowStep is a single step in a workflow.
message WorkflowStep {
  WorkflowCommand command = 1;
}

// WorkflowCommand is a command to be executed in a workflow step.
message WorkflowCommand {
  repeated string args = 1;
}